# agent

./: .env.example  .gitignore  main.py  pyproject.toml  test_smtp.py  view_chroma_vectors.py  项目同步流程.md
app/: __init__.py  analysis_artifacts.py  config.py  db.py  db_bootstrap.py  email_service.py  logging_utils.py  models.py
app/agent/: analysis_session.py  (+5 more)
docs/: 0326问题文档.md  Bankruptcy分析近期变更总结.md  ChromaDB.md  Chroma向量查看参考文档.md  SubAgent架构说明文档.md  knowledge-graph-search-subagent-followup.md  logging-system.md  qlib_analysis_application.md  分块解析说明文档.md  分析模块协作约定.md  嵌入-重排迁移文档.md
frontUI/: .env.development  .env.example  README.md  package-lock.json  package.json
frontend/: app.js  index.html  index.html.bak
knowledge_graph/: .gitignore  build_base_graph.py  build_graph.py  columns.json  env_loader.py  export_neo4j_csv.py  graph_cypher_query_tool.py  patch_graph.py  patch_graph_new.py  render_pyvis.py  simple_query.py  test.py
migrations/: 000_create_databases.sql  001_create_tables.sql  002_alter_users_profile_fields.sql  003_add_preferences_to_users.sql  004_add_rag_tables.sql  005_add_rag_chunking_strategy_fields.sql  006_add_agent_conversation_memory.sql  007_scope_agent_memory_by_conversation.sql  008_create_agent_chat_jobs.sql  009_create_analysis_module_artifacts.sql
tests/: conftest.py  test_agent_subagent_orchestration.py  test_agent_tools_modularization.py  test_bankruptcy.py  test_code_utils.py  test_cors_config.py  test_email_service.py  test_flows.py  test_logging_system.py  test_rag.py  test_report_agent.py  test_report_ui_copy.py  test_robotics_risk.py  test_workspace_report_routes.py
(+256 files in other folders)
